--- a/circle.yml
+++ b/circle.yml
@@ -9,10 +9,12 @@ script:
 dependencies:
   override:
     - mvn -DskipTests clean install dependency:resolve-plugins dependency:go-offline
-  
-branches:
-  only:
-    - develop
+
+deployment:
+  main:
+    branch: master
+    commands:
+      - mvn -s .circleci.settings.xml -DskipTests deploy
     
 test:
   override:
