--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+  	<servers>
+    	<server>
+      	<id>packagecloud-examplecorp</id>
+      	<password>${env.EXAMPLECORP_PACKAGECLOUD_API_TOKEN}</password>
+    	</server>
+  	</servers>
+	</settings>
+
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
